feat: enhance TopBar UI with Material-UI components and dark mode toggle
- Refactored TopBar component to use MUI's AppBar, Box, Button, Chip, and Typography for improved styling and layout.
- Implemented dark mode toggle functionality using a new AppThemeProvider context.
- Updated job status display to use MUI Chip for better visual representation.
- Improved navigation links with MUI Button components for consistency in UI design.

feat: implement message sampling API for dashboard

- Added a new endpoint to fetch sample messages based on the selected dashboard node.
- Implemented logic to parse node IDs and query the database for relevant message data.
- Included label ID mapping to display user-friendly label names in the response.

feat: add tier-2 taxonomy for email labeling

- Defined a new tier-2 taxonomy structure to provide subcategories under each tier-1 category.
- Implemented validation to ensure tier-2 categories align with existing tier-1 categories.

feat: backfill Qdrant embeddings for existing emails

- Created a script to backfill embeddings into Qdrant for already-ingested emails.
- Ensured idempotency by using deterministic point IDs based on email message IDs.

fix: update color utility to use standard HSL syntax

- Modified the usefulnessColor function to use comma-separated HSL syntax for better browser compatibility.

refactor: improve job polling mechanism with SSE fallback

- Enhanced job polling logic to prefer Server-Sent Events (SSE) for real-time updates, with a fallback to polling if SSE fails.
- Added watchdog mechanism to switch to polling if no updates are received within a specified timeframe.

--- a/email-intelligence/backend/.env.example
+++ b/email-intelligence/backend/.env.example
@@ -16,6 +16,14 @@ EMAIL_INTEL_LABEL_VERSION=tier1-v1
 # EMAIL_INTEL_OLLAMA_HOST=http://localhost:11434
 # EMAIL_INTEL_OLLAMA_MODEL=llama3.1
 
+# Embeddings (recommended)
+# Use a dedicated embedding model. Default in code is all-minilm (384 dims).
+# Ensure it's installed locally: `ollama pull all-minilm`
+# EMAIL_INTEL_EMBEDDING_MODEL=all-minilm
+
+# Safety valve (not recommended): allow deterministic dummy vectors if Ollama isn't available.
+# EMAIL_INTEL_ALLOW_DETERMINISTIC_VECTORS=false
+
 # Backward-compatible (supported, but not preferred)
 # DATABASE_URL=postgresql://email:email@localhost:5432/email_intelligence
 # QDRANT_HOST=localhost
