--- a/email-intelligence/frontend/package.json
+++ b/email-intelligence/frontend/package.json
@@ -11,6 +11,10 @@
   "dependencies": {
     "@nivo/core": "^0.88.0",
     "@nivo/sunburst": "^0.88.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.0",
+    "@mui/material": "^6.4.0",
     "react-router-dom": "^6.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
