Refactor code structure for improved readability and maintainability

--- a/email-intelligence/backend/.env.example
+++ b/email-intelligence/backend/.env.example
@@ -8,6 +8,10 @@ EMAIL_INTEL_GMAIL_CREDENTIALS_PATH=credentials.json
 EMAIL_INTEL_GMAIL_TOKEN_PATH=token.json
 EMAIL_INTEL_GMAIL_USER_ID=me
 
+# OAuth UX controls (useful for Gmail label sync which requires gmail.modify scope)
+# EMAIL_INTEL_GMAIL_ALLOW_INTERACTIVE=true
+# EMAIL_INTEL_GMAIL_AUTH_MODE=local_server
+
 # Clustering/labeling
 EMAIL_INTEL_SIMILARITY_THRESHOLD=0.85
 EMAIL_INTEL_LABEL_VERSION=tier1-v1
