feat: add Google Calendar integration and event extraction scripts
- Implemented Google Calendar API client helpers in `calendar_client.py`.
- Created repository helpers for event extraction metadata in `event_metadata_repository.py`.
- Added scripts for batch event extraction from recent emails and tickets/bookings.
- Developed frontend `EventsPage` to display and manage future events.
- Included functionality for hiding/unhiding events and publishing to Google Calendar.
- Added JSON token file for Google Calendar authentication.

--- a/email-intelligence/backend/.env.example
+++ b/email-intelligence/backend/.env.example
@@ -12,6 +12,15 @@ EMAIL_INTEL_GMAIL_USER_ID=me
 # EMAIL_INTEL_GMAIL_ALLOW_INTERACTIVE=true
 # EMAIL_INTEL_GMAIL_AUTH_MODE=local_server
 
+# Google Calendar integration (optional)
+# NOTE: Use a separate token file to avoid scope conflicts with Gmail.
+# EMAIL_INTEL_CALENDAR_ID=primary
+# EMAIL_INTEL_CALENDAR_CREDENTIALS_PATH=credentials.json
+# EMAIL_INTEL_CALENDAR_TOKEN_PATH=calendar_token.json
+# EMAIL_INTEL_CALENDAR_ALLOW_INTERACTIVE=true
+# EMAIL_INTEL_CALENDAR_AUTH_MODE=local_server
+# EMAIL_INTEL_CALENDAR_DEFAULT_TIMEZONE=Europe/London
+
 # Clustering/labeling
 EMAIL_INTEL_SIMILARITY_THRESHOLD=0.85
 EMAIL_INTEL_LABEL_VERSION=tier1-v1
