--- a/email-intelligence/frontend/package.json
+++ b/email-intelligence/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nivo/core": "^0.88.0",
+    "@nivo/pie": "^0.88.0",
     "@nivo/sunburst": "^0.88.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
