feat: implement maintenance pipeline for email intelligence
- Added new maintenance orchestration in `maintenance.py` to handle metadata ingestion, auto-labeling, label outbox pushing, retention planning, inbox cleanup, and event/payment extraction.
- Introduced new settings for maintenance defaults in `settings.py`.
- Created a new script `run_maintenance.py` to execute the maintenance pipeline.
- Updated database schema to include `inbox_removed_at` for tracking inbox aging.
- Added new repository methods for listing unprocessed messages in specific categories and since a given timestamp.
- Enhanced frontend API client to support starting maintenance jobs with configurable parameters.
- Updated JobsPage to include a button for running maintenance jobs.
- Added job polling for maintenance tasks in `useJobPolling.ts`.
- Updated package-lock.json to include lodash version 4.17.23.

--- a/email-intelligence/backend/.env.example
+++ b/email-intelligence/backend/.env.example
@@ -25,6 +25,11 @@ EMAIL_INTEL_GMAIL_USER_ID=me
 EMAIL_INTEL_SIMILARITY_THRESHOLD=0.85
 EMAIL_INTEL_LABEL_VERSION=tier1-v1
 
+# Maintenance defaults
+# EMAIL_INTEL_INBOX_CLEANUP_DAYS=14
+# EMAIL_INTEL_MAINTENANCE_LABEL_THRESHOLD=200
+# EMAIL_INTEL_MAINTENANCE_FALLBACK_DAYS=30
+
 # Optional local LLM
 # EMAIL_INTEL_OLLAMA_HOST=http://localhost:11434
 # EMAIL_INTEL_OLLAMA_MODEL=llama3.1
