feat: enhance maintenance pipeline with incremental processing and demo mode support

--- a/email-intelligence/frontend/.env.example
+++ b/email-intelligence/frontend/.env.example
@@ -1,3 +1,6 @@
 # Optional: set a base URL if you are not using the Vite dev proxy.
 # For example, when backend is running on :8000:
 VITE_API_BASE_URL=http://localhost:8000
+
+# Demo mode (mock data for Events/Financials)
+# VITE_DEMO_MODE=true
